# ontology

./: .env.canvas.example  .env.example  .env.ldap.example  .env.mcp.example  .env.navigate.example  .env.root.example  .env.slate.example  .gitignore  CHANGELOG.md  PLAN.md  README.md  dev.sh  docker-compose.override.example.yml  docker-compose.scan.yml  docker-compose.yml  iblai.env  pyproject.toml  ruff.toml
.github/workflows/: ruff-format.yml  tests.yml
config/: Caddyfile  ontology.example.yaml  ontology.yaml  roles.higher-ed.example.yaml  roles.yaml  services.yaml  sync-schedules.yaml  tools.higher-ed.example.yaml  tools.yaml
docs/: architecture.md  authorization-model.md  configuration.md  deployment.md  identity.md  platform-integration.md  read-only-db-user.md
docs/components/: 01-mcp-inbound.md  02-knowledge-materialization.md  03-identity.md  04-mcp-outbound.md  05-service-discovery.md  06-provisioning.md  07-cli.md
examples/: docker-compose.yml
gateway/: Dockerfile
mcp-servers/canvas/: server.py
mcp-servers/ldap/: requirements.txt  server.py
mcp-servers/navigate/: server.py
mcp-servers/slate/: server.py
ontology/: __init__.py  cli.py  config.py  models.py  mounter.py  registry.py
portal/: .env.example  .gitignore  README.md  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
portal/app/: globals.css  layout.tsx  page.tsx
portal/app/(portal)/: layout.tsx
portal/app/login/: page.tsx
portal/components/apply/: apply-wizard.tsx  question-field.tsx  sdk-apply-wizard.tsx  step-agreements.tsx  step-family.tsx  step-review.tsx  step-students.tsx  wizard-state.ts
portal/components/console/: code-block.tsx  empty-state.tsx  section-header.tsx  status-badge.tsx
portal/components/dashboard/: health-panel.tsx
portal/components/navbar/: credit-balance-widget.tsx  (+2 more)
portal/i18n/: config.ts  request.ts
portal/lib/: courses.ts  format.ts  hooks.ts  session.tsx  status.ts  store.ts  tauri-stub.js  types.ts
portal/messages/: en.json
portal/mocks/: handlers.ts
portal/providers/: iblai-providers.tsx
portal/scripts/: check-i18n.mjs
portal/store/: iblai-store.ts
sql/: schema.sql  views.sql
src/iblai_ontology/: __init__.py  cli.py  ui.py
sync-engine/: Dockerfile
tests/: conftest.py  test_adapters.py  test_api.py  test_backend_django.py  test_catalog.py  test_cli.py  test_cli_utilities.py  test_commands.py  test_config.py  test_config_generator.py  test_config_layer.py  test_engine_integration.py  test_gateway_extras.py  test_identity.py  test_introspection.py  test_ldap_server.py  test_mcp_gateway.py  test_package.py  test_print_db_url.py  test_provisioning.py  test_rate_limit.py  test_replay.py  test_repo_config.py  test_resolve.py  test_safety.py  test_security_headers.py  test_service_add_and_middleware.py  test_skill_parser.py  test_sync.py  test_toolbox_client.py  test_toolbox_compat.py  test_toolbox_config.py  test_url_path_safety.py  test_utils.py  test_writer_upsert.py
(+265 files in other folders)
