[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ontology-fs"
version = "0.1.0"
description = "Filesystem registry that grounds ibl.ai OpenClaw / NemoClaw sandboxes in AWS EFS and NFS"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ibl.ai", email = "hello@ibl.ai" }]
keywords = ["ibl.ai", "openclaw", "nemoclaw", "efs", "nfs", "ontology", "ai-agents", "sandbox"]
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
dev = ["PyYAML>=6.0", "pytest>=7.0"]

[project.scripts]
ontology = "ontology.cli:main"

[project.urls]
Homepage = "https://ibl.ai/ontology"
Repository = "https://github.com/iblai/ontology"

[tool.setuptools.packages.find]
include = ["ontology*"]
